deployments/kubernetes/example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example
  name: example
  labels:
    app: example
spec:
  replicas: 1
  template:
    metadata:
      name: example
      labels:
        app: example
    spec:
      containers:
        - name: example
          image: example/example
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: example
