deployments/kubernetes/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: example
  name: example
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
  - port: 8080
    targetPort: 8080
